@@ -156,6 +156,7 @@ Changes since 2.2.4
     "./foo" to represent a "relatively-absolute" filename on
     DOS/Windows.
 73. modules/stats.sl: Added the correlation function.
+74. src/slarray.c: _isnull was not handling Null_Type arrays.
 
 {{{ Previous Versions
 
